# web_block

./: .flake8  .gitignore  LICENSE  LICENSE.md  README.md  index.html  pyproject.toml  requirements.txt  test.html  web_block.py
.github/workflows/: todo.yml
src/web_block/: web_block.py
