[project]
name = "web_block"
version = "0.1.0"
requires-python = ">= 2.3"
authors = [
    { name = "okcoder1", email = "codershub.code@gmail.com" }
]
maintainers = [
    { name = "okcoder1", email = "codershub.code@gmail.com" }
]
description = "A simple Python module to block websites."
readme = "README.md"
license = "MIT"
license-files = "LICENSE.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 2.3",
    "Programming Language :: Python :: 2.4",
    "Programming Language :: Python :: 2.5",
    "Programming Language :: Python :: 2.6",
    "Programming Language :: Python :: 2.7",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: POSIX :: SunOS/Solaris",
    "Operating System :: Unix",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Topic :: Internet"
]
[project.urls]
Homepage = "https://github.com/ok-coder1/web_block"
Documentation = "https://github.com/ok-coder1/web_block/wiki"
Repository = "https://github.com/ok-coder1/web_block.git"
Issues = "https://github.com/ok-coder1/web_block/issues"