[build-system]
requires = [
    "hatchling"
]
build-backend = "hatchling.build"

[project]
name = "web_block"
version = "1.0.0"
requires-python = ">= 3.9"
authors = [
    { name = "okcoder1", email = "codershub.code@gmail.com" }
]
maintainers = [
    { name = "okcoder1", email = "codershub.code@gmail.com" }
]
description = "A simple Python module to block websites."
readme = "README.md"
license = "MIT"
license-files = [
    "LICENSE.md"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: POSIX :: SunOS/Solaris",
    "Operating System :: Unix",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Topic :: Internet",
    "Topic :: Utilities"
]
dependencies = [
    "tldextract",
    "python-hosts"
]
[project.urls]
Homepage = "https://github.com/ok-coder1/web_block"
Documentation = "https://github.com/ok-coder1/web_block/wiki"
Repository = "https://github.com/ok-coder1/web_block.git"
Issues = "https://github.com/ok-coder1/web_block/issues"